[package]
name = "nukem"
version = "0.26.0-alpha"
authors = ["Bill Graver <bill.graver@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "4.5.13", features = ["derive", "cargo"] }
chrono = "0.4.38"
tokio = { version = "1.39.2", features = ["full"] }
num_cpus = "1.16.0"
glob = "0.3.1"
futures = "0.3.30"